# WavingMan

./: Animation.cpp  Animation.h  Body.cpp  Body.h  CMakeLists.txt  Frame.cpp  Frame.h  Human.cpp  Human.h  Matrix3x3.cpp  Matrix3x3.h  Renderer.cpp  Renderer.h  Sprite.cpp  Sprite.h  circle.fs  frame.h  frame_struct.h  glad.c  main.cpp  trapezium.fs  trapezium.vs
include/glad/: glad.h
